# jellyfin-remote-proxy

./: CHANGELOG.md  Cargo.toml  Containerfile  README.md  justfile  renovate.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: build-container.yml  devcontainer-ci.yml  lint.yml  release-plz.yml  rust.yml
src/: config.rs  discovery.rs  main.rs  proxy.rs
