[package]
description = "A simple remote proxy that tunnels to a remote Jellyfin server and acts as a Jellyfin server locally."
edition = "2021"
license = "AGPL-3.0"
name = "jellyfin-remote-proxy"
repository = "https://github.com/sdwilsh/jellyfin-remote-proxy"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.3"
log = "0.4.21"
nix = { version = "0.29.0", features = ["net", "socket"] }
serde = "1.0.198"
serde_json = "1.0.115"
serde_yaml = "0.9.33"
sozu-command-lib = "0.15.19"
sozu-lib = { version = "0.15.19", default-features = false}
time = "0.3.34"
url = "2.5.0"
