[package]
description = "A simple remote proxy that tunnels to a remote Jellyfin server and acts as a Jellyfin server locally."
edition = "2021"
license = "AGPL-3.0"
name = "jellyfin-remote-proxy"
repository = "https://github.com/sdwilsh/jellyfin-remote-proxy"
version = "0.1.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.198"
serde_json = "1.0.115"
serde_yml = "0.0.12"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.0"
